# study

./: .gitignore  .gitmodules  README.md
cpp_prac/: README.md
cpp_prac/src/chewing_cpp/: CMakeLists.txt  package.xml
cpp_prac/src/chewing_cpp/include/chewing_cpp/1_2/: 1_2.hpp
cpp_prac/src/chewing_cpp/include/chewing_cpp/4_3/: 4_3.hpp
cpp_prac/src/chewing_cpp/include/chewing_cpp/4_4/: 4_4.hpp
cpp_prac/src/chewing_cpp/include/chewing_cpp/4_5/: MyString.hpp
cpp_prac/src/chewing_cpp/include/chewing_cpp/5_1/: complex.hpp
cpp_prac/src/chewing_cpp/include/chewing_cpp/5_2/: 5_2.hpp
cpp_prac/src/chewing_cpp/include/chewing_cpp/5_3/: 5_3.hpp
cpp_prac/src/chewing_cpp/src/1_2/: main.cpp
cpp_prac/src/chewing_cpp/src/2_1/: main.cpp
cpp_prac/src/chewing_cpp/src/4_3/: 4_3.cpp  main.cpp  mission.cpp
cpp_prac/src/chewing_cpp/src/4_4/: 4_4.cpp  main.cpp  stub.cpp
cpp_prac/src/chewing_cpp/src/4_5/: main.cpp
cpp_prac/src/chewing_cpp/src/4_6/: main.cpp
cpp_prac/src/chewing_cpp/src/5_1/: main.cpp
cpp_prac/src/chewing_cpp/src/5_2/: main.cpp
cpp_prac/src/chewing_cpp/src/5_3/: main.cpp
cpp_prac/src/cpp_prac/: CMakeLists.txt  package.xml
cpp_prac/src/cpp_prac/include/cpp_prac/: 7_class.h  8_point.h  8_rect.h  header.h
cpp_prac/src/cpp_prac/src/: 0_cpp_frame.cpp  1_inout.cpp  2_overloading.cpp  3_inline_function.cpp  4_namespace.cpp  5_reference.cpp  6_new_delete.cpp  7_class.cpp  7_class_exe.cpp  8_info_hiding.cpp  8_point.cpp  8_rect.cpp  9_encapsulation.cpp
cpp_prac/src/cpp_refer/: CMakeLists.txt  package.xml
cpp_prac/src/cpp_refer/include/cpp_refer/memory_management_library/: memory_management_library.hpp
cpp_prac/src/cpp_refer/src/memory_management_library/: shared_ptr.cpp  unique_ptr.cpp  weak_ptr.cpp
cpp_prac/src/follow_cpp/: CMakeLists.txt  package.xml
cpp_prac/src/follow_cpp/include/follow_cpp/4_2/: MyConstants.hpp
cpp_prac/src/follow_cpp/src/2_2/: main.cpp
cpp_prac/src/follow_cpp/src/2_3/: main.cpp
cpp_prac/src/follow_cpp/src/2_4/: main.cpp
cpp_prac/src/follow_cpp/src/2_9/: main.cpp
cpp_prac/src/follow_cpp/src/3_4/: main.cpp
cpp_prac/src/follow_cpp/src/4_2/: MyConstraint.cpp  main.cpp  main2.cpp  test.cpp
cpp_prac/src/follow_cpp/src/4_4/: main.cpp  type_test.cpp
cpp_prac/src/follow_cpp/src/4_5/: main.cpp
cpp_prac/src/follow_cpp/src/4_8/: main.cpp
cpp_prac/src/follow_cpp/src/6_13/: main.cpp
cpp_prac/src/follow_cpp/src/6_18/: main.cpp
cpp_prac/src/follow_cpp/src/7_6/: main.cpp
cpp_prac/src/follow_cpp/src/7_9/: main.cpp
cpp_prac/src/follow_cpp/src/8_10/: main.cpp
cpp_prac/src/follow_cpp/src/8_11/: main.cpp
cpp_prac/src/follow_cpp/src/8_12/: main.cpp  main2.cpp
cpp_prac/src/follow_cpp/src/8_13/: main.cpp  main2.cpp
cpp_prac/src/follow_cpp/src/8_2/: main.cpp
cpp_prac/src/follow_cpp/src/9_1/: main.cpp
cpp_prac/src/optimized_cpp/: CMakeLists.txt  package.xml
cpp_prac/src/optimized_cpp/src/: main.cpp
cpp_prac/src/professional_cpp/: CMakeLists.txt  package.xml
cpp_prac/src/professional_cpp/include/professional_cpp/ch1/: ch1_Employee.hpp
cpp_prac/src/professional_cpp/src/: ch1.cpp  ch1_Employee.cpp  ch1_EmployeeTest.cpp  template.cpp
cpp_prac/src/professional_cpp/src/ch1/: ch1.cpp  ch1_Employee.cpp  ch1_EmployeeTest.cpp
cpp_prac/src/professional_cpp/src/ch7/: 1_memory.cpp  2_smart_pointer.cpp  memory.cpp
local_ba_g2o/src/local_ba_g2o/: CMakeLists.txt  local_ba_g2o.txt  package.xml  with_wheel.txt
local_ba_g2o/src/local_ba_g2o/include/data_io/: dataio.hpp
local_ba_g2o/src/local_ba_g2o/include/local_ba_g2o/: frame.hpp  landmark.hpp  random.hpp
local_ba_g2o/src/local_ba_g2o/include/local_ba_g2o/data_io/: dataio.hpp
local_ba_g2o/src/local_ba_g2o/include/local_ba_g2o/local_ba_g2o/: frame.hpp  landmark.hpp  random.hpp  type.h
local_ba_g2o/src/local_ba_g2o/include/local_ba_g2o/optimize/: optimizer.hpp
local_ba_g2o/src/local_ba_g2o/include/local_ba_g2o_with_wheel/data_io/: dataio.hpp
local_ba_g2o/src/local_ba_g2o/include/local_ba_g2o_with_wheel/local_ba_g2o/: frame.hpp  landmark.hpp  random.hpp
local_ba_g2o/src/local_ba_g2o/include/local_ba_g2o_with_wheel/optimize/: optimizer.hpp
local_ba_g2o/src/local_ba_g2o/include/optimize/: optimizer.hpp
local_ba_g2o/src/local_ba_g2o/launch/: local_ba_g2o.launch  local_ba_g2o_with_wheel.launch
local_ba_g2o/src/local_ba_g2o/src/: local_ba_g2o.cpp  local_ba_g2o_with_wheel.cpp  main.cpp
pose_graph_optimization/src/: README.md
pose_graph_optimization/src/pgo_toy_example/: CMakeLists.txt  package.xml
pose_graph_optimization/src/pgo_toy_example/include/pgo_toy_example/: pgo_additional_edge.hpp  pgo_toy_example.h
pose_graph_optimization/src/pgo_toy_example/launch/: pgo_toy_example.launch
pose_graph_optimization/src/pgo_toy_example/rviz/: toy_example.rviz
pose_graph_optimization/src/pgo_toy_example/src/: pgo_additional_edge.cpp  pgo_additional_edge_node.cpp  pgo_toy_example.cpp  pgo_toy_example_node.cpp
